# claude-loop-tools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  META.md  README.md  install.sh  update.sh
.github/workflows/: test.yml
crates/audit-unused-dep/: Cargo.toml
crates/audit-unused-dep/src/: main.rs
crates/claude-loop/: Cargo.toml
crates/claude-loop/src/: main.rs
crates/file-adr/: Cargo.toml
crates/file-adr/src/: main.rs
crates/regression-guard/: Cargo.toml
crates/regression-guard/src/: main.rs
crates/skill-count-audit/: Cargo.toml
crates/skill-count-audit/src/: main.rs
docs/: LOOP_PATTERNS.md
examples/: README.md  loop-history.example.jsonl  paused-loops.example.json
lib/: fmt-sweep.sh  rotate-history.sh  workspace-tests.sh
skills/audit-unused-dep/: SKILL.md
skills/checkpoint/: SKILL.md
skills/file-adr/: SKILL.md
skills/fmt-sweep/: SKILL.md
skills/forge-mirror-scaffold/: SKILL.md
skills/loop-edit/: SKILL.md
skills/loop-from-task/: SKILL.md
skills/loop-health/: SKILL.md
skills/loop-on/: SKILL.md
skills/loop-pause/: SKILL.md
skills/loop-resume/: SKILL.md
skills/loop-stop/: SKILL.md
skills/loop-track/: SKILL.md
skills/loop-update/: SKILL.md
skills/loops/: SKILL.md
skills/pause/: SKILL.md
skills/regression-guard/: SKILL.md
skills/restore/: SKILL.md
skills/resume/: SKILL.md
skills/workspace-tests/: SKILL.md
test/: run-tests.sh
