[workspace]
members = ["crates/claude-loop", "crates/file-adr", "crates/audit-unused-dep", "crates/regression-guard"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["thepictishbeast and Claude contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml_edit = "0.22"
regex = "1"
fs2 = "0.4"
