[package]
name = "audit-unused-dep"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Scan a Cargo.toml + src/ tree for zero-call-site direct dependencies. Reports candidates; doesn't modify Cargo.toml. Cross-checks vs. cargo-machete when present."

[[bin]]
name = "audit-unused-dep"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
regex.workspace = true
