[package]
name = "claude-loop"
version = "0.1.0"
edition = "2021"
description = "Atomic CLI for /loop-pause, /loop-resume, /loops, /loop-history skills. Token-efficient Rust replacement for prior shell-based markdown-skill orchestration."
license = "Apache-2.0 OR MIT"

[[bin]]
name = "claude-loop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
fs2 = "0.4"
