[package]
name = "claude-loop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Atomic CLI for /loop-pause, /loop-resume, /loops, /loop-history skills. Token-efficient Rust replacement for prior shell-based markdown-skill orchestration."

[[bin]]
name = "claude-loop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
fs2.workspace = true
