[package]
name = "regression-guard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Generate a REGRESSION-GUARD test stub anchored on a refactor commit. Detects the pattern (let-else / let-Ok-else / warn+continue / SAFETY annotation / etc.) and emits a test fn skeleton with docstring back-ref to the commit."

[[bin]]
name = "regression-guard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
