[package]
name = "skill-count-audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Count installed Claude Code skills; warn when over the soft cap of 15. Companion to the skill-vs-MCP allocation policy in META.md."

[[bin]]
name = "skill-count-audit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
